# StoneAgeClient

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  PROJECT_STATUS.md  README.md  build_test.bat  check_size.c  configure.bat  rebuild.bat  run_tests.bat  test_result.txt
include/: album.h  animation.h  application.h  assets.h  assets_file.h  assets_sprite.h  audiomanager.h  battle.h  battle_action.h  battle_action_exec.h  battle_calc.h  battle_protocol.h  battle_render.h  battle_state.h  battle_transition.h  character.h  character_npc.h  character_protocol.h  charselect.h  chat.h  chatcommand.h  commandline.h  config.h  configfile.h  craft.h  cursor.h  directx.h  effect.h  event.h  fade.h  field_entity.h  field_update.h  fileutil.h  font.h  friend.h  game.h  gameconfig.h  gameloop.h  gamestate.h  graphics.h  (+80 more)
res/: resource.rc
src/: logger.c  main.c  sprite.c.bak  stubs.c  stubs_battle.c  stubs_entity.c  stubs_globals.c  stubs_network.c  stubs_render.c  stubs_ui.c  winmain.c
src/animation/: animation_core.c  animation_direction.c  animation_state.c  animation_util.c
src/assets/: assets.c  assets_file.c  assets_sprite.c  resource.c
src/battle/: battle.c  battle_action.c.bak  battle_action_attack.c  battle_action_core.c  battle_action_exec.c  battle_action_item.c  battle_action_pet.c  battle_action_render.c  battle_action_skill.c  battle_action_special.c  battle_calc.c  battle_protocol.c  battle_render.c  battle_render_actions.c  battle_render_ui.c  battle_state.c  battle_transition.c  battle_unit.c  battle_util.c
src/character/: character.c  character_npc.c  character_protocol.c
src/chat/: chat.c  chat_file.c  chat_protocol.c  chatcommand.c
src/config/: config.c  configfile.c
src/craft/: craft.c
src/directx/: directx_core.c  directx_internal.h  directx_sprite.c
src/effect/: effect.c  effect_core.c  effect_manager.c  effect_protocol.c  effect_query.c  effect_update.c  pet_effect.c
src/entity/: entity_list.c
src/event/: event.c
src/fade/: fade_core.c  fade_effects.c  fade_standard.c
src/field/: field_entity.c  field_update.c
src/game/: application.c  game.c  gameconfig.c  gameloop.c  gamestate.c  gamestate_states.c  scene.c
src/graphics/: graphics.c
src/guild/: guild.c  guild_protocol.c
src/input/: hotkey.c  ime.c  input.c
src/inventory/: inventory.c
src/item/: item.c  item_effect.c  item_protocol.c
src/login/: charselect.c  login.c.bak  login_auth.c  login_character.c  login_core.c  login_crypto.c  login_screen.c  serverselect.c
src/mail/: mail.c  mail_file.c  mail_protocol.c
src/map/: isometric.c  map.c.bak  map_battle.c  map_core.c  map_iso.c  map_npc.c  map_render.c  map_tileattr.c  mapmanager.c
src/network/: network_core.c  network_lsrpc.c  network_process.c  network_protocol.c  network_protocol_binary.c  network_protocol_data.c  network_send.c
src/npc/: npc.c  npc_dialog.c  npc_packet.c  npc_shop.c
src/party/: party.c  party_core.c  party_module.c
src/pathfind/: pathfind_astar.c  pathfind_core.c  pathfind_internal.h  pathfind_movement.c
src/pet/: album.c  pet.c  pet_ai.c  pet_battle.c  pet_ops.c  pet_protocol.c  petai.c  petai_decision.c  petai_settings.c  petaisettings.c
src/protocol/: protocol.c  protocol_binary.c  protocol_handler.c  protocol_handler_data.c  protocol_handler_sync.c  protocol_text.c  protocol_text_handlers.c  protocol_util.c
src/quest/: quest.c
src/render/: render.c  render_blend.c  render_queue.c  render_queue_process.c  render_sprite.c  render_surface.c  render_text.c
src/save/: save.c  savedata.c
src/shop/: shop_core.c  shop_protocol.c  shop_ui.c
src/skill/: skill.c  skill_casting.c  skill_core.c  skill_damage.c  skill_protocol.c
src/social/: friend.c
src/sound/: audiomanager.c  sound_bgm.c  sound_bgm_streaming.c  sound_core.c  sound_internal.h  sound_se.c
src/sprite/: sprite_background.c  sprite_blend.c  sprite_cache.c  sprite_core.c  sprite_lcg.c  sprite_lookup.c  sprite_queue.c  sprite_render.c  sprite_rle.c
src/storage/: storage.c  storage_protocol.c
src/stubs/: stubs_battle.c  stubs_char.c  stubs_entity.c  stubs_entity_character.c  stubs_entity_core.c  stubs_entity_flags.c  stubs_entity_movement.c  stubs_entity_slot.c  stubs_entity_spawn.c  stubs_game.c  stubs_globals.c  stubs_login.c  stubs_misc.c  stubs_network.c  stubs_player.c  stubs_protocol.c  stubs_render.c  stubs_save.c  stubs_sound.c  stubs_ui.c  stubs_util.c
src/text_protocol/: text_protocol_core.c  text_protocol_handlers.c  text_protocol_internal.h  text_protocol_message.c
src/trade/: trade.c  trade_protocol.c
src/ui/: cursor.c  font.c  menu.c  minimap.c  notification.c  ranking.c  ui.c  ui_element.c  ui_input.c  ui_render.c  ui_skin.c  ui_window.c  (+5 more)
tests/: CMakeLists.txt  COVERAGE_REPORT.md  TEST_TODO.md  test_album_comprehensive.c  test_angle_normalize_comprehensive.c  test_angle_normalize_functions_comprehensive.c  test_animation.c  test_animation_system_comprehensive.c  test_application_comprehensive.c  test_assets_comprehensive.c  test_assets_module_comprehensive.c  test_base62_parser_comprehensive.c  test_battle.c  test_battle_action.c  test_battle_action_attack_module_comprehensive.c  test_battle_action_dispatch_comprehensive.c  test_battle_action_dispatcher_comprehensive.c  test_battle_action_exec.c  test_battle_action_executor_comprehensive.c  test_battle_action_render_comprehensive.c  test_battle_calc.c  test_battle_calc_comprehensive.c  test_battle_core_comprehensive.c  test_battle_handlers_comprehensive.c  test_battle_map_load_comprehensive.c  test_battle_state_machine_comprehensive.c  test_battle_unit.c  test_battle_unit_comprehensive.c  test_bgm_loading_comprehensive.c  test_binary_packet_dispatcher_comprehensive.c  test_binary_protocol_dispatcher_comprehensive.c  test_camera_system_comprehensive.c  test_character_movement_comprehensive.c  test_character_protocol.c  test_character_protocol_comprehensive.c  test_character_select_system_comprehensive.c  test_chat.c  test_chat_protocol_module_comprehensive.c  test_clamp_value_comprehensive.c  test_commandline_comprehensive.c  (+202 more)
(+10 files in other folders)
